syntax = "proto3";

package proto;

message Chambre {
  int64 idChambre = 1;
  int32 numero = 2;
  double prix = 3;
  int32 nombreLits = 4;
  int64 idHotel = 5;
  string imageChambre = 6;
}
